public interface MeioPagamento {
    
    double pagar(double valor);

}