public class Paciente {

    public String nome;
    
    public Paciente(String n){
        this.nome = n;
    }
}